Resource/iptables.test.rules
*nat

# ssh; 22 ftp; 11344 openvpn; 21344 ut:61344
#          49100:49600              59999-61000

# VPN postrouting
-A POSTROUTING -s 10.99.99.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.152.2.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.8.1.0/24 -o eth0 -j MASQUERADE

COMMIT

*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# docker
# -A INPUT -i docker -j ACCEPT
# -A FORWARD -i eth0 -o docker0 -j ACCEPT
# -A FORWARD -o eth0 -i docker0 -j ACCEPT

# Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allows all outbound traffic
# You could modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Allows SSH connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
# sshd
-A INPUT -p tcp --dport 7070 -j ACCEPT

# Allows HTTP and HTTPS connections from anywhere (the normal ports for websites)
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p udp --dport 80 -j ACCEPT
-A INPUT -p udp --dport 443 -j ACCEPT

# Allows FTP connection
-A INPUT -p tcp --dport 20 -j ACCEPT
-A INPUT -p tcp --dport 21 -j ACCEPT
-A INPUT -p tcp --dport 11344 -j ACCEPT
-A INPUT -p tcp --dport 49100:49600 -j ACCEPT
-A INPUT -p udp --dport 49100:49600 -j ACCEPT

# Allows DNS connection
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT

# Allows SMTP connection
-A INPUT -p tcp --dport 465 -j ACCEPT
-A INPUT -p tcp --dport 25 -j ACCEPT
-A INPUT -p udp --dport 25 -j ACCEPT

# Allows POP3 connection
-A INPUT -p tcp --dport 110 -j ACCEPT

# Allows IMAP connection
-A INPUT -p tcp --dport 143 -j ACCEPT
-A INPUT -p tcp --dport 587 -j ACCEPT
-A INPUT -p udp --dport 587 -j ACCEPT

# Allows IMAP connection
-A INPUT -p tcp --dport 5432 -j ACCEPT
-A INPUT -p udp --dport 5432 -j ACCEPT


# allow VNC
# -A INPUT -p tcp --dport 31344:31347 -j ACCEPT
# -A INPUT -p tcp --dport 5901:5905 -j ACCEPT
# -A INPUT -p tcp --dport 5801:5805 -j ACCEPT

# xrdp
-A INPUT -p tcp --dport 3389 -j ACCEPT
-A INPUT -p tcp --dport 5900 -j ACCEPT

# rsync
# -A INPUT -p tcp -m state --state NEW  -m tcp --dport 873 -j ACCEPT

# Allows SSH connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW --dport 1344 -j ACCEPT
# sshd
-A INPUT -p tcp --dport 7070 -j ACCEPT

# ut
-A INPUT -p tcp --dport 61344 -j ACCEPT
-A INPUT -p tcp --dport 59999:61000 -j ACCEPT
-A INPUT -p udp --dport 59999:61000 -j ACCEPT

# PPTP
-A INPUT -p tcp --dport 1723 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A FORWARD -d 10.99.99.0/24 -j ACCEPT
-A FORWARD -s 10.99.99.0/24 -j ACCEPT

# L2TP
-A INPUT -p udp --dport 1701 -j ACCEPT
# IPSec
-A INPUT -p udp --dport 500 -j ACCEPT
-A INPUT -p tcp --dport 500 -j ACCEPT
-A INPUT -p udp --dport 4500 -j ACCEPT
-A INPUT -p tcp --dport 4500 -j ACCEPT
-A INPUT -i eth0 -s 10.152.2.0/24 -j ACCEPT
-A FORWARD -i eth0 -d 10.152.2.0/24 -j ACCEPT
-A FORWARD -o eth0 -s 10.152.2.0/24 -j ACCEPT

#OpenVPN
-A INPUT -p udp --dport 21344 -j ACCEPT
-A INPUT -p udp --dport 21345 -j ACCEPT
-A FORWARD -i eth0 -d 10.8.1.0/24 -j ACCEPT
-A FORWARD -o eth0 -s 10.8.1.0/24 -j ACCEPT
-A FORWARD -i eth0 -d 10.8.2.0/24 -j ACCEPT
-A FORWARD -o eth0 -s 10.8.2.0/24 -j ACCEPT

# ShadowSocks
-A INPUT -p tcp --dport 21346 -j ACCEPT
-A INPUT -p udp --dport 21346 -j ACCEPT
#-A INPUT -p tcp --dport 49100:49600 -j ACCEPT

# kcptun
-A INPUT -p udp --dport 29900 -j ACCEPT
-A INPUT -p udp --dport 29901 -j ACCEPT


# Squid3

# Now you should read up on iptables rules and consider whether ssh access
# for everyone is really desired. Most likely you will only allow access from certain IPs.

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables input denied: " --log-level 7
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "iptables forward denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
